Bug 906001 - Improve tests and asserts around starting off thread parses while GC is active in the atoms zone, r=billm.