js/src/gc/Zone.cpp
@@ -76,6 +76,7 @@ Zone::setNeedsBarrier(bool needs, ShouldUpdateIon updateIon)
     if (needs && runtimeFromMainThread()->isAtomsZone(this))
         JS_ASSERT(!runtimeFromMainThread()->exclusiveThreadsPresent());
 
+    JS_ASSERT_IF(needs, canCollect());
     needsBarrier_ = needs;
 }
 
