js/src/vm/Runtime.h
@@ -1415,7 +1415,7 @@ struct JSRuntime : public JS::shadow::Runtime,
     // The atoms compartment is the only one in its zone.
     inline bool isAtomsZone(JS::Zone *zone);
 
-    inline bool atomsZoneNeedsBarrier();
+    bool activeGCInAtomsZone();
 
     union {
         /*
